tests/fails/f6.t

A = struct { a : &A }

terra foo()
    var a : A    
end
foo()